<resources>
    <string name="app_name">gClose</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido">Apellido</string>
    <string name="hint_fecha_nac">Fecha de nacimiento</string>
    <string name="hint_sexo">Sexo</string>
    <string name="hint_interes">Interés</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="tvLogin">No tienes cuenta ? <u>Regístrate!</u></string>
    <string name="registrar">Registrar</string>
    <string name="ingresar">Ingresar</string>
    <string name="description">DESCRIPCIÓN</string>
    <string name="work">Trabajo:</string>
    <string name="studies">Estudios:</string>
    <string name="location">Ciudad:</string>
    <string name="description1">Descripción:</string>
    <string name="photos">FOTOS</string>
    <string name="default_descripcion">Tu descripción</string>
    <string name="default_location">Santa Fe - Argentina</string>
    <string name="default_studies">UTN - FRSF</string>
    <string name="default_work">Developer en i2T</string>
    <string name="btnGuardarCambios">Guardar cambios</string>
    <string name="btnCambiar">Cambiar foto de perfil</string>
    <string name="cambiarPortada">Cambiar portada</string>
    <string name="cambiarGaleria">Galería</string>


    <string-array name="sexos">
        <item>Femenino</item>
        <item>Masculino</item>
        <item>Indefinido</item>
    </string-array>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_profile">Perfil</string>
    <string name="title_getclose">Get Close</string>
    <string name="title_crushes">Crushes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
