<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.RegisterActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".View.RegisterActivity"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/billabong"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="80sp"/>

        <EditText
            android:id="@+id/EditNombre"
            style="@style/editTextStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_nombre" />

        <EditText
            android:id="@+id/EditApellido"
            style="@style/editTextStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/EditNombre"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_apellido"/>

        <EditText
            android:id="@+id/FechaNac"
            style="@style/editTextStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/EditApellido"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_fecha_nac"
            android:inputType="date"
            android:editable="false"/>

        <Spinner
            android:id="@+id/Spinner_sexo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/FechaNac"
            android:hint="@string/hint_sexo"
            android:spinnerMode="dropdown"
            android:popupBackground="#55000000"
            android:background="#55000000"
            android:layout_centerHorizontal="true"/>

        <Spinner
            android:id="@+id/Spinner_interes"
            android:layout_marginTop="10dp"
            android:layout_below="@id/Spinner_sexo"
            android:spinnerMode="dropdown"
            android:layout_width="300dp"
            android:background="#55000000"
            android:layout_height="wrap_content"
            android:hint="@string/hint_interes"
            android:layout_centerHorizontal="true"
            android:popupBackground="#55000000"
            android:prompt="@string/hint_interes"/>

        <EditText
            android:id="@+id/EditUsername"
            style="@style/editTextStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:background="#55000000"
            android:layout_marginTop="10dp"
            android:layout_below="@id/Spinner_interes"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/EditPassword"
            style="@style/editTextStyle"
            android:layout_marginTop="10dp"
            android:layout_below="@id/EditUsername"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btRegistro"
            android:layout_width="300dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/EditPassword"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_1"
            android:text="@string/registrar"
            android:textColor="@android:color/white"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</ScrollView>